--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-data-redis')
 }
