--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -1,24 +1,6 @@
-ignite:
-  igniteInstanceName: properties-instance-name
-  communicationSpi:
-    localPort: 5555
-  dataStorageConfiguration:
-    defaultDataRegionConfiguration:
-      initialSize: 10485760 #10MB
-    dataRegionConfigurations:
-      - name: my-dataregion
-        initialSize: 104857600 #100MB
-  cacheConfiguration:
-    - name: accounts
-      queryEntities:
-        - tableName: ACCOUNTS
-          keyFieldName: ID
-          keyType: java.lang.Long
-          valueType: java.lang.Object
-          fields:
-            ID: java.lang.Long
-            amount: java.lang.Double
-            updateDate: java.util.Date
-    - name: my-cache2
-
 server.port: 8080
+springdoc.swagger-ui.path: /
+springdoc.packagesToScan: com.lcgblog.study.springboot.controller
+
+
+
