complete crud with jdbc starter

--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server.port: 8080
-springdoc.swagger-ui.path: /
-springdoc.packagesToScan: com.lcgblog.study.springboot.controller
 
-
+springdoc:
+  swagger-ui:
+    path: /
 
