--- a/springboot/src/main/resources/application-data-jpa.yml
+++ b/springboot/src/main/resources/application-data-jpa.yml
@@ -7,3 +7,26 @@ spring:
     username: pizzashop
     password: oprExVnD72WVUtYH
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+        # 显示SQL参数
+        type: trace
+        # 显示SQL执行时间
+        generate_statistics: true
+        # 显示缓存统计
+        cache:
+          use_second_level_cache: false
+    # 日志级别配置
+  logging:
+    level:
+      org.hibernate.SQL: DEBUG
+      org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+      org.hibernate.stat: DEBUG
+      org.springframework.transaction: DEBUG
+      org.springframework.orm.jpa: DEBUG
